--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <title>Onboarding</title>
 </head>
 <body>
+    <a href="https://nenorvalls-projects-showcase.netlify.app/" class="back-to-landing">
+       <h1>Onboarding</h1>
+    </a>
     <div class="onboarding-container">
         <div class="pageContainer">
             <div id="page1" class="page">
                 <img src="https://i.ibb.co/MMm5DK1/connect-multiple-accounts.jpg" alt="connect-multiple-accounts">
-                <h1>Connect multiple accounts</h1>
+                <h2>Connect multiple accounts</h2>
                 <p>Stay connected to any platform you are used to. Starting from Twitter, Instagram, Slack or whatever.</p>
                 <button class="skip-button">Skip</button>
                 <button class="next-button">&rarr;</button>
