--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <title>Onboarding</title>
 </head>
 <body>
-    <a href="https://nenorvalls-projects-showcase.netlify.app/" class="back-to-landing">
        <h1>Onboarding</h1>
-    </a>
     <div class="onboarding-container">
         <div class="pageContainer">
             <div id="page1" class="page">
@@ -39,6 +37,7 @@
             </div>
         </div>
     </div>
+    <button id="goBackButton">Go Back to Portfolio</button>
     
     <script src="index.js"></script>
 </body>
