--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Onboarding</title>
 </head>
 <body>
-       <h1>Onboarding</h1>
+       <h1 id="goBackButton">Onboarding</h1>
     <div class="onboarding-container">
         <div class="pageContainer">
             <div id="page1" class="page">
@@ -37,7 +37,6 @@
             </div>
         </div>
     </div>
-    <button id="goBackButton">Go Back to Portfolio</button>
     
     <script src="index.js"></script>
 </body>
