--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <title>Onboarding</title>
 </head>
 <body>
-       <h1 id="goBackButton">Onboarding</h1>
     <div class="onboarding-container">
         <div class="pageContainer">
             <div id="page1" class="page">
                 <img src="https://i.ibb.co/MMm5DK1/connect-multiple-accounts.jpg" alt="connect-multiple-accounts">
-                <h2>Connect multiple accounts</h2>
+                <h1 id="goBackButton">Connect multiple accounts</h1>
                 <p>Stay connected to any platform you are used to. Starting from Twitter, Instagram, Slack or whatever.</p>
                 <button class="skip-button">Skip</button>
                 <button class="next-button">&rarr;</button>
